--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     </head>
     
   <body>
-    <section>
+    <header class=title>
+    <h1>MyPortfolio</h1>
+    <header/>
+    <section class='baking'>
       <a href="https://therecipecritic.com/cookies-and-cream-ice-cream-cake/"> Recipe</a>
     </section>
+    <section class='sketches'> 
+      <a href=>Artwork</a>
+    </section>
+    <section >
   </body>
   <footer>
     
